website/translated_docs/cs-CZ/version-3.8.6/install.md
---
id: version-3.8.6-installation
title: Installation
original_id: instalace
---

Verdaccio is a multiplatform web application. To install it, you need a few prerequisites.

#### Předpoklady

1. Verze Node vyšší než 
    - For version `verdaccio@2.x` Node `v4.6.1` is the minimum supported version.
    - For version `verdaccio@latest` Node `6.12.0` is the minimum supported version.
2. npm `>=3.x` or `yarn`
3. The web interface supports the `Chrome, Firefox, Edge, and IE9` browsers.

## Instalace CLI

`verdaccio` must be installed globaly using either of the following methods:

Pomocí `npm`

```bash
npm install -g verdaccio
```

nebo pomocí `yarn`

```bash
yarn global add verdaccio
```

![install verdaccio](/svg/install_verdaccio.gif)

## Základní použití

Po instalaci stačí provést CLI příkaz:

```bash
$> verdaccio
warn --- config file  - /home/.config/verdaccio/config.yaml
warn --- http address - http://localhost:4873/ - verdaccio/3.0.1
```

For more information about the CLI, please [read the cli section](cli.md).

## Docker Image

`verdaccio` has an official docker image you can use, and in most cases, the default configuration is good enough. For more information about how to install the official image, [read the docker section](docker.md).

## Cloudron

`verdaccio` is also available as a 1-click install on [Cloudron](https://cloudron.io)

[![Instalace](https://cloudron.io/img/button.svg)](https://cloudron.io/button.html?app=org.eggertsson.verdaccio)